--- a/index.html
+++ b/index.html
@@ -18,17 +18,68 @@
     </div>
 
     <div id="root">
-        <div class="main flex">
+    <!-- homepage -->
+        <div class="main flex jumbotron hide">
             <div class="container text-container flex">
-                <h2 class="text-white welcome-text medium-text">Selamat datang!</h2>
+                <h2 class="text-white medium-text welkam tomato">Selamat datang!</h2>
                 <h3 class="text-white quote-text">Lorem ipsum dolor sit amet consectetur</h3>
-                <h2 class="text-white description-text">Pigura jaranan.</h2>
+                <h2 class="text-white description-text">Buka Setiap hari!</h2>
             </div>
             <div class="container img-container flex flex-items-center">
                 <img class="flat-img" src="img/2204_w037_n003_304b_p1_304.jpg" alt="flat Ilustration">
             </div>
         </div>
+
+        <!-- aboutUs page -->
+        <div class="main flex aboutUsPage hide">
+            <div class="container flex profile">
+                <img src="img/AboutUsImg.jpg" alt="iniGambarOrangNaikMotor" title="ini photoProfilenya" class="aboutUsImg">
+                <div class="textabout">
+                    <h2 class="username">Sutrisno</h2>
+                    <h4 class="title tomato">Pigura jaranan</h4>
+                    <br>
+                    <p class="description-profile">Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus labore <span class="primary">maxime eum aspernatur</span> eius ut earum architecto magnam.</p>
+                </div>
+            </div>
+            <div class="container cerita-aboutUs flex flex-items-center">
+                <h2 class="description-title">Lorem, ipsum dolor.</h2>
+                <div class="cerita-box">Lorem ipsum <span class="tomato">dolor sit amet</span> consectetur adipisicing <span class="primary">elit</span>.</div>
+                <div class="cerita-box">Lorem ipsum dolor sit <span class="primary">amet consectetur</span> <span class="tomato">adipisicing</span>.</div>
+                <div class="cerita-box"><span class="primary">Lorem ipsum</span> dolor sit amet consectetur.</div>
+            </div>
+        </div>
+
+        <!-- portfolio -->
+        <div class="projects hide">
+            <div class="card random1"></div>
+            <div class="card random2"></div>
+            <div class="card random3"></div>
+        </div>
+
+        <!-- contact page -->
+        <div class="main flex contact flex-items-center hide">
+            <div class="container flex contact-text">
+                <div class="contact-item">
+                    <h2 class="title-contact">Lokasi</h2>
+                    <h4 class="description-contact">JawaTengah - RejowinagunUtara - Jaranan</h4>
+                </div>
+                <div class="contact-item">
+                    <h2 class="title-contact">Nomor</h2>
+                    <h4 class="description-contact">Sepertinya masih privasi</h4>
+                </div>
+                <div class="contact-item">
+                    <h2 class="title-contact">Email</h2>
+                    <h4 class="description-contact">Sepertinya masih privasi juga...</h4>
+                </div>
+            </div>
+            <div class="container flex map-container flex-items-center">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d788.458498045866!2d110.22475085562803!3d-7.481686740797805!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e7a8ffe6e863677%3A0x77ab37e90f36af55!2sHomes!5e0!3m2!1sid!2sid!4v1655362715533!5m2!1sid!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+        </div>
+
     </div>
+
+
     <script src="script.js"></script>
 </body>
 </html>
