semua section jadi onclick, next tinggal design warna

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+    <div class="load">
+        <h1>Loading...</h1>
+    </div>
+
     <div class="navbar flex">
         <h1 class="text-white brand medium-text" id="home">Kemat</h1>
         <nav>
@@ -49,7 +54,7 @@
             </div>
         </div>
 
-        <!-- portfolio -->
+        <!-- portfolio page -->
         <div class="projects hide">
             <div class="card random1"></div>
             <div class="card random2"></div>
@@ -78,7 +83,6 @@
         </div>
 
     </div>
-
 
     <script src="script.js"></script>
 </body>
